2006-08-31  Julien Puydt  <jpuydt@free.fr>

	* src/clients/avahi.cpp: Fixed #349804, with help from Sebastien
	Estienne and Lennart Poettering.

2006-08-29  Julien Puydt  <jpuydt@free.fr>

	* src/gui/chat.cpp: Partial fix for #340853.

2006-08-26  Julien Puydt  <jpuydt@free.fr>

	* src/gui/accounts.cpp: Fixed #351937.

2006-08-15  Damien Sandras  <dsandras@gnome.org>

	* src/gui/main.cpp: Fixed suspend video (#347874).

2006-08-15  Damien Sandras  <dsandras@gnome.org>

	* ekiga.schemas.in.in:
	Changed default values of DTMF mode to 1 (SIP INFO).

2006-08-15  Damien Sandras  <dsandras@gnome.org>

	* ekiga.desktop.in.in: Added bugzilla support to desktop file 
	(fixes #348309).

2006-07-09  Damien Sandras  <dsandras@gnome.org>

	* configure.in src/endpoints/h323.cpp src/endpoints/sip.cpp:
	Use Phobos as HEAD is broken currently.

2006-08-03  Julien Puydt  <jpuydt@free.fr>

	* lib/gmconf/gmconf-gconf.c: Made removing recursive.

2006-07-09  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/manager.cpp:
	Simplified messages.

2006-07-09  Damien Sandras  <dsandras@gnome.org>

	* src/gui/callbacks.cpp:
	Fixed typo which triggered #346907.

2006-07-09  Damien Sandras  <dsandras@gnome.org>

	* ekiga.schemas.in.in src/gui/preferences.cpp:
	Keep RFC2833 as default DTMF mode to keep compatibility with 
	Ekiga 2.0.x. 
	Fixes #346892.

2006-07-05  Damien Sandras  <dsandras@gnome.org>

	* src/clients/stun.cpp: When executing the NAT test, and STUN is not
	suitable, remove the current STUN setting instead of leaving it as is.
	Thanks to Elaine Xiong <elaine xiong sun com> for reporting this.

2006-07-05  Julien Puydt  <jpuydt@free.fr>

	* src/gui/accounts.cpp: Added '#' as allowed character in usernames
	(Fixes #346545).

2006-07-05  Julien Puydt  <jpuydt@free.fr>

	* src/Makefile.am: Put src/clients/ils.* in EXTRA_DIST, so translators
	don't have errors when it isn't in the tarball. (Fixes #346641)

2006-07-03  Damien Sandras  <dsandras@gnome.org>
