@@ -20,6 +20,8 @@ Fixes in OPAL/PWLIB/Ekiga since 2.0.2:
 - Fixed video suspend. (Damien Sandras, #347874)
 - Fixed crash when avahi is disabled for users (Julien Puydt with help from
 Sebastien Estienne and Lennart Poettering, #349804)
+- Made the avahi publishing survive a daemon restart (Julien Puydt with help
+from Sebastien Estienne and Lennart Poettering, #351549)
 
 
 Fixes in OPAL/PWLIB/Ekiga since 2.0.1:
