@@ -1,5 +1,10 @@
 2006-08-31  Julien Puydt  <jpuydt@free.fr>
 
+	* src/clients/avahi.h, src/clients/avahi.cpp: Fixed #351549, with help
+	from Sebastien Estienne and Lennart Poettering.
+
+2006-08-31  Julien Puydt  <jpuydt@free.fr>
+
 	* src/clients/avahi.cpp: Fixed #349804, with help from Sebastien
 	Estienne and Lennart Poettering.
 
